assets/css/styles.css
:root {
    --teal: #00b3b3;
    --silver: #c0c0c0;
    --edgePadding: 25px;
    --hfHeight: 125px;
}

* {
    margin: 0px;
    padding: 0px;
}

body {
    background-color: black;
    display: block;
    margin: 0px;
    width: 100vw;
}

header {
    background-color: var(--teal);
    height: var(--hfHeight);
    width: 100%;
}

header .header {
    align-items: center;
    display: flex;
    flex-flow: column;
    height: 100%;
    justify-content: center;
    padding-left: var(--edgePadding);
    padding-right: var(--edgePadding);
}

header h1 {
    font-size: 36px;
}

main {
    background-color: var(--silver);
    display: block;
    margin-top: 20px;
    width: 100%;
}

.content {
    display: block;
}

.about, .portfolio {
    align-content: flex-start;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-left: var(--edgePadding);
    padding-right: var(--edgePadding);
}

.about .aboutContent, .portfolio .portfolioContent {
    align-self: end;
}

.aboutHeading, .portfolioHeading {
    font-size: 22px;
    width: 10%;
}

.aboutContent, .portfolioContent {
    font-size: 18px;
    width: 88%;
}

img {
    padding: 0px;
    width: 100%;
}

footer {
    align-items: center;
    background-color: var(--teal);
    display: flex;
    font-size: 18px;
    height: var(--hfHeight);
    margin-top: 20px;
    width: 100vw;
}

footer p {
    font-size: 18px;
    padding-left: var(--edgePadding);
}

